2002-10-28  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPUSoftwareInterrupt): improved message about BIOS calls that are not emulated and need a BIOS file
	* src/GBA.cpp (CPUInit): fix bug setting reable IO positions

2002-10-27  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (sdlReadPreferences): Fixed warning if MMX not in use when reading the configuration file
	* src/SDL.cpp (main): Fixed crash if BIOS file not specified correctly
	* src/win32/Win32.cpp: Support for higher frameskip 
	* src/SDL.cpp: Support for higher frameskip 

2002-10-26  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: Add 800x600 support 

2002-10-25  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (fileExportGSASnapshot): added code
	* src/win32/ExportGSASnapshot.cpp: Created dialog 
	* src/win32/Commands.cpp: Added new menu options

2002-10-24  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPUReadGSASnapshot): Now skipping notes if they exist

2002-10-23  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (initApp): remember freeze recent list flag

2002-10-22  Forgotten  <forgotten@users.sourceforge.net>
	
	* win32/.cvsignore: added output directories and MSVC files to ignore
	* src/win32/.cvsignore: Added vba.aps to ignore list	
	* src/TestEmu.cpp (systemPauseOnFrame): Added missing return statement
	* INSTALL: Updated GCC requirements
	* src/win32/Win32.cpp: added flag to freeze recent list
	* src/win32/vba.rc: added flag to freeze recent list
	* Initial Public Version
